--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "data-structures",
   "version": "1.0.0",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "jest"
+    "lint": "eslint ./src/**/*.ts",
+    "lint:fix": "eslint --fix src/**/*.ts",
+    "test": "jest",
+    "build": "rimraf dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -15,6 +20,16 @@
   },
   "homepage": "https://github.com/wiktor-mazur/data-structures#readme",
   "devDependencies": {
-    "jest": "^24.5.0"
+    "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "@typescript-eslint/parser": "5.4.0",
+    "eslint": "8.2.0",
+    "eslint-config-airbnb-typescript": "^16.0.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7"
+  },
+  "dependencies": {
+    "rimraf": "^3.0.2",
+    "typescript": "^4.5.2"
   }
 }
